--- a/portfolio.html
+++ b/portfolio.html
@@ -83,7 +83,7 @@
                         <img src="images/storedelluna.png" alt="portfolio-image" class="img-fluid rounded w-100 d-block">
                         <div class="hover-overlay">
                             <div class="hover-content">
-                                <a class="btn btn-light btn-sm" href="https://github.com/ChipzDaebak/Project-Store-Del-Luna">view project</a>
+                                <a class="btn btn-light btn-sm" href="https://bit.ly/3GVt0CC">view project</a>
                             </div>
                         </div>
                     </div>
